fixed an image squishing issue

--- a/index.css
+++ b/index.css
@@ -111,21 +111,25 @@ main {
 }
 
 .image-container {
-  flex: 1 1 40%;
+  flex: 1 1 50%;
   display: flex;
   justify-content: center;
 }
 
 .image-container-inner {
   max-width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 img {
   width: 75%;
+  height: auto;
 }
 
 .page-info {
-  flex: 1 1 60%;
+  flex: 1 1 50%;
   display: flex;
   justify-content: center;
   align-items: center;
